# Pyramid

./: .gitignore  CMakeLists.txt  HowToPlay.txt  README.md  readme.txt
code/: EN_pack.cpp  IT_pack.cpp  choices.cpp  declaration.cpp  end_game.cpp  endings.cpp  errors.cpp  game.cpp  lang-EN_pack.cpp  lang-IT_pack.cpp  main.cpp  start_game.cpp
code/header/: end.hpp  errors.hpp  extern_choices.hpp  game.hpp  start.hpp
code/languages/: EN_header.hpp  languages.hpp
code/languages/lang_EN/: EN_pack.cpp
code/languages/lang_IT/: IT_header.hpp  IT_pack.cpp
